<resources>
    <string name="app_name">InuPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="text_value_radio_notification">Music-Radio Player</string>
    <string name="acra_toast_text">ACRA Crash Repot</string>
    <string name="mail_subject">InuPlayer 크래시 발생</string>
    <string name="mail_body">기본바디</string>
    <string name="quick_scroll_handle">quick scroll handle</string>

    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="permission_not_granted">App requires access to storage to access items stored in MediaStore.</string>

    <string name="delete_dialog_title">Delete?</string>
    <string name="delete_dialog_message">Delete %1$s?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="update_dialog_title">Update?</string>
    <string name="update_dialog_message">Update %1$s?</string>
    <string name="update_dialog_positive">Update</string>
    <string name="update_dialog_negative">Cancel</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="modify">Update</string>
    <string name="allMusic">\u0040</string>
</resources>